SCRUM-10 Basic error handling for file operations